example/errors/lexer/unterminated_block_comment.box
/* this is first line 

k /* fdsajkfl
fjdklsa */


    somewhere /* 

    right /* /*


*/ still missing



*/
